spacing fixed

--- a/css/meetgreet.css
+++ b/css/meetgreet.css
@@ -86,7 +86,6 @@
   align-items: center;
   padding-left: 10% !important;
   margin: 0 auto;
-  padding-top: 100px;
   gap: 200px;
 }
 .make__conn > * {
